--- a/deployment.yaml
+++ b/deployment.yaml
@@ -9,10 +9,9 @@ jobs:
    # If timeout is not specified, the job will be terminated after 24 hours.
    timeout: 2h30m
    steps:
-     - name: run models # Give each step in your job a name. This will enable you to track the steps in the logs.
-       command: dbt run # Enter the dbt command that should run in this step. This example will run all your models. For a list of available commands visit https://docs.getdbt.com/reference/model-selection-syntax/.
-     - name: test models
-       command: dbt test # This example will run all your tests.
+     - name: run models
+       command: dbt run -m my_first_dbt_model 
+       command: dbt test  -m my_first_dbt_model.sql 
 
  - name: nightly
    schedule: 0 0 * * * # This example will run every day at midnight.
